[package]
name = "rustui"
version = "0.1.0"
authors = ["Wei Zhong <zhongwei99@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "*"
termion = "*"
rand = "*"
structopt = "*"
stderrlog = "*"
failure = "0.1"

[dev-dependencies]